2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	  Make sure that, when you stop a component, all client-side messages
	  are cleared from the state, so that the UI can remove them when
	  the component is sleeping.  This got broken again recently, please
	  take care when rewriting UI code.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/base/baseadminnode.py:
	  Make the id of render errors unique by using the title of the
	  Node.  This makes sure that render error messages from one node
	  do not get removed by the successful rendering of another node,
	  both deriving from the same base class.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/gtk/adminwindow.py:
	  Make docstrings adhere to style guide.
	  Document the fact that _componentDo can also take a None state,
	  in which case it will look at the current selection.

2008-08-24  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/admin/command/common.py:
	* flumotion/admin/command/component.py:
	* flumotion/admin/command/manager.py:
	  Fixes and cleanups.

2008-08-24  Arek Korbik  <arkadini@gmail.com>

	* flumotion/common/bundle.py:
	Revert r6608 and r6614, as they introduced a fatal race condition
	in the unbundling code. Fixes #1116.

2008-08-23  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/service/main.py:
	  make it clear that condrestart is available.

2008-08-23  Murray Cumming  <murrayc@murrayc.com>

	* flumotion/admin/gtk/dialogs.py:
	* flumotion/admin/gtk/diskersteps.py:
	* flumotion/admin/gtk/greeter.py:
	* flumotion/admin/gtk/httpstreamersteps.py:
	* flumotion/admin/gtk/shout2steps.py:
	* flumotion/component/encoders/dirac/wizard_gtk.py:
	* flumotion/component/encoders/jpeg/wizard_gtk.py:
	* flumotion/component/encoders/mulaw/wizard_gtk.py:
	* flumotion/component/encoders/smoke/wizard_gtk.py: